--- a/Transaction/RFM analysis/Description
+++ b/Transaction/RFM analysis/Description
@@ -1,3 +1,3 @@
 There are 2 files :
-- [PDF file](): RFM segmentation results
+- [PDF file](https://github.com/KieuOanh2003/SQL-project/blob/main/Transaction/RFM%20analysis/pdf_RFM_segmentation.pdf): RFM segmentation results
 - SQL file: SQL code
